SSCSCI-1945: tidy up unit tests